# histring

./: .gitignore  Makefile.am  Makefile.in  README  acconfig.h  config.h.in  configure  configure.ac  histring.1  histring.c  mkinstalldirs
debian/: changelog  control  copyright  files  histring.manpages  rules  source.lintian-overrides  watch
debian/source/: options
